--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
 *{
     margin: 0;
     padding: 0;
-    background-color: black;
     color: white;
     box-sizing: border-box;
+}
+body{
+    background-color: black;
 }
